--- a/clone-messenger/package.json
+++ b/clone-messenger/package.json
@@ -6,14 +6,19 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.0",
+    "@mui/styles": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.2",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "sort-by": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "node-sass": "^7.0.3",
     "sass": "^1.56.2"
   }
 }
