--- a/clone-messenger/package.json
+++ b/clone-messenger/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
-    "@mui/styles": "^5.11.0",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +15,14 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-text-ellipsis": "^1.6.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -47,7 +51,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
-    "node-sass": "^7.0.3",
     "sass": "^1.56.2"
   }
 }
