--- a/clone-messenger/package.json
+++ b/clone-messenger/package.json
@@ -23,6 +23,7 @@
     "react-text-ellipsis": "^1.6.0",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
