--- a/clone-messenger/package.json
+++ b/clone-messenger/package.json
@@ -10,19 +10,25 @@
     "@mui/lab": "^5.0.0-alpha.113",
     "@mui/material": "^5.11.0",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-text-ellipsis": "^1.6.0",
+    "react-toastify": "^9.1.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
