--- a/clone-messenger/package.json
+++ b/clone-messenger/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
+    "jquery": "^3.6.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
@@ -29,13 +30,14 @@
     "react-scripts": "5.0.1",
     "react-text-ellipsis": "^1.6.0",
     "react-toastify": "^9.1.1",
+    "signalr": "^2.4.3",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "start & webpack-dev-server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -59,7 +61,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
-    "sass": "^1.56.2"
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
