--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "start": "webpack serve --progress --color",
     "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
