--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.41",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
