--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
+    "i": "^0.3.7",
     "jquery": "^3.6.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
@@ -23,6 +29,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "normalize.css": "^8.0.1",
+    "npm": "^10.2.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +42,7 @@
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -65,6 +73,7 @@
     "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@typescript-eslint/parser": "^5.62.0",
     "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
