--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@mui/material": "^5.11.0",
     "@mui/styled-engine-sc": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.11",
@@ -19,7 +18,7 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "axios": "^1.2.2",
+    "axios": "^1.2.1",
     "classnames": "^2.3.2",
     "i": "^0.3.7",
     "jquery": "^3.6.3",
@@ -42,7 +41,6 @@
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -84,6 +82,8 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
